overflow issue resolved

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,8 +27,14 @@ $colors: (
 }
 
 body {
+    width: 100%;
+}
+
+.bodyClone {
     width: 100vw;
-    overflow-x: hidden !important;
+    height: auto;
+    overflow-x: hidden;
+    position: relative;
 }
 
 // .pop {
